[package]
name = "crowdsale-vesting"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
authors = ["Tengiz Sharafiev <btolfa@gmail.com>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "crowdsale_vesting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
